Fixed font colors, only need to make NEXTMEOW smaller and align tetriminos in center for both NEXT/HOLD

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -85,7 +85,6 @@ h1 {
   justify-content: space-between;
   align-items: center;
   width: 180px;
-  color: white;
   padding: 5px;
   border: 5px solid gray;
   border-radius: 8%;
@@ -93,7 +92,6 @@ h1 {
 
 .score > h1, .controls > h1 {
   font-size: 1.5em;
-  color: green;
 }
 
 /* MacOS Big Sur Button CSS */
